--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,13 @@
 }
 
 .job-title {
-  color: #FF530D;
+  color: tomato;
+  text-shadow: 1px 1px 2px #000000;
+}
+
+.section-title {
+  color: tomato;
+  text-shadow: 1px 1px 2px #000000;
 }
 
 .headshot {
